# p2

./: .gitignore  Cargo.toml  READMD.md  index.html  package.json  pnpm-lock.yaml  tauri+vue+rust.md  vite.config.ts
.github/workflows/: ci.yaml
libcommon/: Cargo.toml
libcommon/examples/: log_test.rs  macro_test.rs  pub_test.rs
libcommon/macro_builder/: Cargo.toml
libcommon/macro_builder/src/: builder.rs  default_with.rs  getter.rs  lib.rs  with.rs
libcommon/macro_log/: Cargo.toml
libcommon/macro_log/src/: lib.rs  parse.rs
libcommon/macro_logiferr/: Cargo.toml
libcommon/macro_logiferr/src/: lib.rs
libcommon/macro_timer/: Cargo.toml
libcommon/macro_timer/src/: lib.rs
libcommon/src/: lib.rs
libcommon/src/ext/: command.rs  file.rs  mod.rs  str.rs
libcommon/src/log/: logger.rs  logwriter.rs  logwriter_default.rs  mod.rs
libcommon/src/macroext/: curr.rs  hash.rs  iffeature.rs  mod.rs
libcommon/src/prelude/: mod.rs  result.rs
p2/: .gitignore  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
p2/src/: App.vue  command.ts  index.css
p2/src-tauri/: Cargo.toml  tauri.conf.json
p2/src-tauri/capabilities/: default.json
p2/src-tauri/src/: command.rs  lib.rs  log.rs  preluad.rs  result.rs  window.rs
p2/src-tauri/src/plugin/: mod.rs
p2/src-tauri/src/preluad/: logger.rs  mod.rs  result.rs
p2/src-tauri/src/search/: mod.rs
p2/src-tauri/src/sys/: mod.rs  shortcut.rs  trayicon.rs  window.rs
p2/src-tauri/src/utils/: mod.rs
p2/src/components/ui/command/: CommandInput.vue
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  prelude.rs
testapp/: Cargo.toml
testapp/src/: main.rs
