[package]
name = "libcommon"
version = "0.1.0"
edition = "2024"

# doc: cargo doc --no-deps --open
# 如果去除了已经生成的部分的文档，需要手动删掉缓存

[dependencies]
anyhow = "1.0"
log = "0.4"
macro_timer = { path = "./macro_timer" }
macro_logiferr = { path = "./macro_logiferr" }
macro_log = { path = "./macro_log" }
macro_builder = { path = "./macro_builder" }
colored = "3.0"
crossbeam-channel = "0.5"
chrono = "0.4"
tokio = { version = "1", optional = true }

[features]
logfile = []
logfile_default = ["logfile", "tokio"]
