[package]
name = "testapp"
version = "0.1.0"
edition = "2024"

[dependencies]
# libcommon = { path = "../libcommon" }
libcommon = { path = "../libcommon", features = ["logfile_default"] }
# libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon", features = [
#     "logfile",
# ] }
tokio = { version = "1.47", features = ["full"] }
